--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  wifi_scan: ^0.4.1+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  permission_handler: ^11.3.1
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
